--- a/home902.html
+++ b/home902.html
@@ -291,8 +291,8 @@
     <script>
         // 初始数据
         const roomName = "莱茵花园902室";
-        const dkNames = ["主卧灯", "客厅灯", "次卧灯", "厨房灯", "卫生间灯", "阳台灯"];
-        const dkUids = ["84F3EB35E156", "84F3EB35E157", "84F3EB35E158", "84F3EB35E159", "84F3EB35E160", "84F3EB35E161"];
+        const dkNames = ["客厅灯", "主卧灯", "次卧灯"];
+        const dkUids = ["500291E1D42D", "84F3EB35E156",  "500291ED7881"];
         
         // ============ 修改点1：使用WSS连接 ============
         // 使用EMQX的WebSocket SSL连接（更稳定，浏览器兼容性好）
@@ -801,3 +801,4 @@
 </body>
 
 </html>
+
