--- a/html/homeShanCun.html
+++ b/html/homeShanCun.html
@@ -6,13 +6,13 @@
     <title>Smart902 - 山村</title>
     <!-- 引入jQuery -->
     <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
-	<script src="https://hanni92.github.io/jquery-3.7.1.js"></script>
+	<script src="https://hanni92.github.io/../js/jquery-3.7.1.js"></script>
     <!-- 引入MQTT.js -->
     <!-- <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script> -->
-	<script src="https://hanni92.github.io/mqtt.min.js"></script>
+	<script src="https://hanni92.github.io/../js/mqtt.min.js"></script>
     <!-- 引入Bootstrap用于响应式设计 -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
-	<link href="https://hanni92.github.io/bootstrap.min.css" rel="stylesheet">
+	<link href="https://hanni92.github.io/../css/bootstrap.min.css" rel="stylesheet">
     <style>
         /* 样式保持不变，与之前相同 */
         :root {
@@ -801,3 +801,4 @@
 </body>
 
 </html>
+
