--- a/html/home902.html
+++ b/html/home902.html
@@ -6,13 +6,13 @@
     <title>Smart902 - 莱茵花园902室</title>
     <!-- 引入jQuery -->
     <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
-	<script src="https://hanni92.github.io/../js/jquery-3.7.1.js"></script>
+	<script src="https://hanni92.github.io/js/jquery-3.7.1.js"></script>
     <!-- 引入MQTT.js -->
     <!-- <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script> -->
-	<script src="https://hanni92.github.io/../js/mqtt.min.js"></script>
+	<script src="https://hanni92.github.io/js/mqtt.min.js"></script>
     <!-- 引入Bootstrap用于响应式设计 -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
-	<link href="https://hanni92.github.io/../css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://hanni92.github.io/css/bootstrap.min.css" rel="stylesheet">
     <style>
         /* 样式保持不变，与之前相同 */
         :root {
@@ -266,7 +266,7 @@
         <!-- 页面头部 -->
         <div class="header">
             <h1 id="roomName">莱茵花园902室</h1>
-            <p>Smart902 <a href="https://hanni92.github.io/app-release.apk">下载APP</a></p>
+            <p>Smart902 <a href="https://hanni92.github.io/app/app-release.apk">下载APP</a></p>
             <div id="connectionStatus" class="connection-status connecting">
                 <span id="statusText">正在连接MQTT服务器...</span>
                 <button id="reconnectBtn" class="reconnect-btn" style="display:none;" onclick="manualReconnect()">重新连接</button>
@@ -801,5 +801,6 @@
 </body>
 
 </html>
+
 
 
